bitfields/tests/compile_error_cases/bitfield_field_duplicate_name.stderr
error: The field name 'a' is duplicated, each field must have a unique name.
  --> tests/compile_error_cases/bitfield_field_duplicate_name.rs:10:5
   |
10 |     a: u8,
   |     ^
